# hampel

./: CMakeLists.txt  README.md  example_usage.c  hampel_hft_fast_avx2.c  hampelavx512.c
include/: hampel_robust.h
tests/: test_hampel.c
